# ToolDeck

./: .gitignore  CMakeLists.txt  README.md
docs/: developer-guide.md
examples/default-echo/: echo.sh  manifest.json
examples/file-hash/: build.sh  filehash.c  manifest.json
examples/hello-world/: hello.sh  manifest.json
examples/port-check/: check.sh  manifest.json
examples/win-sysinfo/: manifest.json  sysinfo.ps1
examples/zip-inspect/: manifest.json  zip-inspect.sh
scripts/: build-appimage.sh  build-windows.sh  build.sh  test-tools.sh  toolchain-mingw.cmake
src/: main.cpp
src/core/: diff_engine.cpp  diff_engine.h  tool_instance.cpp  tool_instance.h  tool_manager.cpp  tool_manager.h  tool_manifest.cpp  tool_manifest.h  tool_registry.cpp  tool_registry.h
src/ui/: compare_input_dialog.cpp  compare_input_dialog.h  dashboard_widget.cpp  dashboard_widget.h  input_dialog.cpp  input_dialog.h  main_window.cpp  main_window.h  output_panel.cpp  output_panel.h  sidebar_widget.cpp  sidebar_widget.h  tool_card.cpp  tool_card.h
tests/tools/all-needed/: manifest.json  needed.sh
tests/tools/anywhere/: manifest.json  sys.sh
tests/tools/bool-flags/: flags.sh  manifest.json
tests/tools/clock-watch/: manifest.json  watch.sh
tests/tools/fmt-json/: fmt.sh  manifest.json
tests/tools/no-tmpl/: manifest.json  tmpl.sh
tests/tools/num-calc/: calc.sh  manifest.json
tests/tools/pick-dir/: manifest.json  pick.sh
tests/tools/quick-ok/: manifest.json  ok.sh
